package strategypatten;

/**
 * @Author: liyuzhan
 * @classDesp： 封装了具体的算法或行为
 * @Date: 2020/3/3 12:06
 * @Email: 1031759184@qq.com
 */
public class ConcreteStrategyC extends Strategy {
    /**
     * 算法C实现
     */
    @Override
    public void algorithmInterface() {
        System.out.println("算法C实现");
    }

}
