package strategypatten;
/**
 *  @Author: liyuzhan
 *  @classDesp： 定义所有支持的算法的公共接口
 *  @Date: 2020/3/3 11:56
 *  @Email: 1031759184@qq.com
 */
public abstract class Strategy {
    /**
     * 算法方法
     */
    public abstract void algorithmInterface();
}
